frontend: Fix edit header display height.
Header navbar covers the entire Mac OS X old Zulip desktop app page; this should fix that error.

--- a/static/styles/portico.css
+++ b/static/styles/portico.css
@@ -30,12 +30,13 @@
 
 .header {
     padding: 6px 0px;
+    height: 29px;
 }
 
 .header .stripes,
 .header .darker {
     position: absolute;
-    height: 40px;
+    height: 100%;
     width: 100%;
     top: 0px;
 
